Fix post-spread invisible in Gemini

--- a/source/css/_schemes/Gemini/index.styl
+++ b/source/css/_schemes/Gemini/index.styl
@@ -78,7 +78,8 @@ use_seo = hexo-config('seo');
 // Post delimiters.
 .post-eof,
 .post-spread {
-  hide();
+  margin-top: 0px;
+  background: white;
 }
 
 // Pagination.
